--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Petani Maju</string>
+    <string name="forum">Forum</string>
+    <string name="home">Home</string>
+    <string name="shop">Shop</string>
+    <string name="user">User</string>
+    <string name="education">Education</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
