--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,12 @@
     <string name="shop">Shop</string>
     <string name="user">User</string>
     <string name="education">Education</string>
+    <string name="pasar">Pasar</string>
+    <string name="harga">Harga</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="judul">Judul</string>
+    <string name="desc">Desc</string>
+    <string name="title">title</string>
+
 </resources>
