--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,9 @@
     <string name="petani_maju">Petani Maju</string>
     <string name="lokasi_user">Lokasi User</string>
     <string name="greeting_home">Hi, UserName \nSelamat datang diaplikasi Pertani Maju</string>
-    <string name="video_edukasi">Video\n  Edukasi</string>
+    <string name="video_edukasi">  Video\nEdukasi</string>
     <string name="pembelian">Pembelian</string>
+    <string name="komunitas">Komunitas</string>
+    <string name="flash_sale">Flash Sale</string>
 
 </resources>
