--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="pembelian">Pembelian</string>
     <string name="komunitas">Komunitas</string>
     <string name="flash_sale">Flash Sale</string>
+    <string name="total">Total</string>
+    <string name="nominal">nominal</string>
 
 </resources>
